# C-CPP-Experiments

./: .gitignore  CMakeLists.txt  README.md
C. 0-byte in string/: CMakeLists.txt  main.c
C. ToBits/: CMakeLists.txt  bit.h  bits.c  bits.h  endianness.c  endianness.h  main.c
CrossPlatform/: CMakeLists.txt
CrossPlatform/C. 0-byte in string/: CMakeLists.txt  main.c
CrossPlatform/C. Anagram (UTF-16)/: CMakeLists.txt  anagram.c  anagram.h  main.c
CrossPlatform/C. ToBits/: CMakeLists.txt  bits.c  bits.h  endianness.c
Unix/: CMakeLists.txt
Unix/C. ALSA-Mic-dB/: CMakeLists.txt  alsa_mixer.c  alsa_mixer.h  list.c  operate.c
src/C. 0-byte in string/: CMakeLists.txt
src/C. Anagram (UTF-16)/: CMakeLists.txt  gcsio.c  gcsio.h
src/C. ToBits/: CMakeLists.txt  bits.c  endianness.h  main.c
